# meta-frontend

./: .gitmodules  CMakeLists.txt  README.md  distributor.cpp  distributor.h  log.h  meta-frontend.h
distribution_strategies/: distribution_strategy.h  local_distribution_strategy.cpp  local_distribution_strategy.h  round_robin_distribution_strategy.cpp  round_robin_distribution_strategy.h
web/: request_builder.cpp  request_builder.h
workeradapter/: local_worker_adapter.cpp  local_worker_adapter.h  remote_worker_adapter.cpp  remote_worker_adapter.h  worker_adapter.h
